# EF-PPO

./: .gitignore  README.md  pyproject.toml
ef_ppo/: __init__.py  critics.py  discriminator.py  ef_ppo.py  ef_ppo_imitation_trainer.py  ef_ppo_trainer.py  hl_segment.py  logger.py  models.py  play.py  test_environment.py  test_mujoco_with_muscles.py  train.py  utils.py
experiments/: sagittal_walk.yaml
