[tool.poetry]
name = "ef-ppo"
version = "0.1.0"
description = "EF-PPO implementation of Leonard Franz"
authors = ["Leonard Franz <leonard.franz@student.uni-tuebingen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <=3.11.5"
deprl = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
